# python-third-party-imports

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
examples/: conf.py  main.py  some.py
examples/nested/: __init__.py  another.py  exec_file
src/: builtins.rs  main.rs
