[package]
name = "third-party-imports"
version = "0.0.6"
edition = "2021"
authors = ["Maksudul Haque <saad.mk112@gmail.com>"]
homepage = "https://github.com/saadmk11/python-third-party-imports"
repository = "https://github.com/saadmk11/python-third-party-imports"
documentation = "https://github.com/saadmk11/python-third-party-imports"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
jwalk = "0.8.1"
rustpython-ast = "0.2.0"
rustpython-parser = "0.2.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "thin"
panic = "abort"
